# resume-api

./: .env.example  .gitignore  ANONYMIZATION_GUIDE.md  DEFERRED-WORK.md  Dockerfile  README.md  docker-compose.yml  implementation-guide-generator-prompt.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.idx/: dev.nix
.planning/: ROADMAP.md  STATE.md
Documentation/: GEMINI_CONTEXT.md  Resume API — Complete Implementation Guide.md  Resume API — Phase 2 Implementation Guide.md
ai-service/: .coveragerc  .dockerignore  .env.example  Dockerfile  adr_content.py  gcp-setup.sh  interview_qa.py  loader.py  main.py  prompts.py  pytest.ini  rag.py  requirements-dev.txt  requirements.txt  resume_data.py  scrub.py  scrub_patterns.example.yaml  secrets.py  security.py  unanswered.py
api/: Dockerfile  database.py  main.py  models.py  requirements.txt
benchmarks/: benchmark_large.py  benchmark_medium.py  benchmark_small.py
data/: .gcloudignore  check_db.py  generate_data.py
docs/: PRD.md  architecture-diagram.md  bug-fix-log.md  gemini-context.md  implementation-guide.md  phase-2-approach.md  phase-2-implementation-guide.md  phase-3-implementation-guide.md
errors and bugs/: bug_fix_log.txt
frontend/: .dockerignore  .env.example  Dockerfile  config.json.template  deploy.sh  nginx.conf  package-lock.json  vite.config.ts
n8n/: .env.example  docker-compose.yml
scripts/: check-anonymization.sh  clean_db.py  deny-patterns.example.txt  vendor_model.sh
systemd/: resume-api.service
tasks/: prd-resume-ai-platform.md
tests/: conftest.py
(+99 files in other folders)
