[project]
name = "resume-api"
version = "1.0.0"
description = "REST API serving structured resume data with analytics tracking, dual-database architecture (SQLite + BigQuery), deployed on Google Cloud Run"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.4.0",
    "fastapi>=0.129.0",
    "google-cloud-bigquery>=3.40.1",
    "pandas>=3.0.1",
    "uvicorn[standard]>=0.41.0",
]
